@@ -1,3 +1,12 @@
+2009-03-09  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	Let -Wportability turn on/off the portability-recursive channel.
+	* lib/Automake/ChannelDefs.pm (switch_warning): switch
+	`portability-recursive' channel as well if changing the
+	`portability' channel.
+	* tests/dollarvar2.test: New test.
+	* tests/Makefile.am: Update.
+
 2009-03-07  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	New automake command line option `--silent-rules'.
